# libe2c-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.rst  TODO.rst  clean.sh  resources.org
doc/: doxygen.conf
include/libe2c/: client.h  consensus.h  crypto.h  e2c.h  entity.h  liveness.h  promise.hpp  resources.org  task.h  type.h  util.h
programs/: .gitignore  CMakeLists.txt  application.cpp  client.cpp
scripts/: gen_conf.py  run_demo.sh  run_demo_client.sh
src/: client.cpp  config.h.in  consensus.cpp  crypto.cpp  e2c.cpp  entity.cpp  keygen.cpp  tls_keygen.cpp  util.cpp
test/: .gitignore  CMakeLists.txt  test_secp256k1.cpp
